# tldextract

./: .codeclimate.yml  .coverage  .gitignore  .travis.yml  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  conftest.py  pylintrc  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup.py  tox.ini
.github/: FUNDING.yml
.github/workflows/: ci.yml
scripts/: release.py
tests/: __init__.py  cli_test.py  conftest.py  custom_suffix_test.py  helpers.py  integration_test.py  main_test.py  test_cache.py  test_parallel.py  test_release.py  test_trie.py
tests/__snapshots__/: test_release.ambr
tldextract/: .tld_regex_snapshot  .tld_set_snapshot  __init__.py  cache.py  cli.py  docstring.py  extractTLD.py  pkg_ressources.py  remote.py  suffix_list.py  tldextract.py  utils.py
tldextract/tests/: __init__.py  all.py  helpers.py  integration_test.py  lint.py  lint_test.py  main_test.py
tldextract_app/: README.md  app.yaml  handlers.py  requirements.txt  setup.py
