[metadata]
license_file = LICENSE

[mypy]
check_untyped_defs = True
disallow_incomplete_defs = True
disallow_untyped_calls = True

[mypy-tldextract.*]
disallow_untyped_defs = True

[pycodestyle]
# E203 - whitespace before; disagrees with PEP8 https://github.com/psf/black/issues/354#issuecomment-397684838
# E501 - line too long
# W503 - line break before binary operator; disagrees with PEP8 https://github.com/psf/black/issues/52
ignore = E203, E501, W503
